# TuneTON

./: .ai-settings.json  .editorconfig  .env.example  .env.production  .gitignore  .npmrc  .prettierrc  AUDIO_CONTEXT_ACTIVATION_FIXES.md  AUDIO_CONTEXT_ACTIVATION_IMPLEMENTATION.md  AUDIO_CONTEXT_ACTIVATION_IMPLEMENTATION_SUMMARY.md  AUDIO_CONTEXT_ERROR_HANDLING.md  AUDIO_FIXES_SUMMARY.md  AUDIO_FIXES_UPDATE_SUMMARY.md  AUDIO_PLAYBACK_COMPLETE_SOLUTION.md  AUDIO_PLAYBACK_CURRENT_STATUS.md  AUDIO_PLAYBACK_FAILED_ATTEMPTS.md  AUDIO_PLAYBACK_FIXES_SUMMARY.md  AUDIO_PLAYBACK_FIX_PLAN.md  AUDIO_PLAYBACK_FIX_SUMMARY.md  AUDIO_PLAYBACK_ISSUES_CURRENT_STATUS.md  AUDIO_PLAYBACK_ISSUES_RESOLUTION.md  AUDIO_PLAYBACK_ISSUES_SUMMARY.md  AUDIO_PLAYBACK_ISSUE_ANALYSIS.md  AUDIO_PLAYER_API_COMPLIANCE.md  AUDIO_PLAYER_CODE_CHANGES.md  AUDIO_PLAYER_CRITICAL_ISSUES.md  AUDIO_PLAYER_FIX_IMPLEMENTATION.md  AUDIO_PLAYER_FIX_SUMMARY.md  AUDIO_PLAYER_TEST_PLAN.md  Audio-player-issue.md  Audio_Player_PoC.md  Audio_Player_Solution_Feasibility.md  Audio_Player_Technical_Analysis.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_FUNCTION_REVIEW.md  CONSOLIDATED_PROJECT_OVERVIEW.md  CONSOLIDATED_PROJECT_OVERVIEW_RU.md  CONVERSATION_SUMMARY.md  DETAILED_FUNCTION_REVIEW.md  DETAILED_REMEDIATION_STEPS.md  (+52 more)
.qoder/: settings.json
ARCHIVE/: .env.FIGMA_API_TOKEN  debug_telegram_auth.js  monitor_auth_flow.js  package.json
ARCHIVE BACKUPS OLD/: detailed_debug.js  package-lock.json  sonar-project.properties  u3220060_tuneton_qoder.ftp_settings
data/: tracks.json
src/wasm/src/wasm/: Cargo.toml
(+800 files in other folders)
