[package]
name = "audio-effects-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "AudioContext",
  "AudioWorkletGlobalScope",
]

# Оптимизации для размера WASM
[profile.release]
opt-level = 's'          # Оптимизация размера
lto = true              # Link Time Optimization
debug = false           # Отключаем debug символы
panic = 'abort'         # Используем abort вместо unwind

# Дополнительные оптимизации
[profile.release.package."*"]
opt-level = 's'